# diploma

./: README.md  pyproject.toml
diploma/: __init__.py  __main__.py  main.py
diploma/datasets/: __init__.py  cifar10.py  mnist.py
diploma/helpers/: __init__.py  base_model.py  helpers.py  types.py  vizualization.py
diploma/models/: __init__.py  cnn_mnist.py  resnet18_cifar10.py
