[project]
name = "diploma"
version = "1.1.0"
description = "Моята дипломна работа."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "matplotlib>=3.10.9",
  "numpy>=2.4.6",
  "pytorch-triton-rocm; sys_platform == 'linux'",
  "rich>=15.0.0",
  "torch>=2.12.0",
  "torchattacks>=3.5.1",
  "torchvision>=0.27.0",
  "triton-rocm; sys_platform == 'linux'",
]

[project.scripts]
diploma = "diploma.__main__:main"

[dependency-groups]
dev = [
  "pandas-stubs>=3.0.3.260530",
  "scipy-stubs>=1.17.1.5",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.basedpyright]
typeCheckingMode = "recommended"
reportAny = false
allowedUntypedLibraries = ["torchattacks", "torchvision"]

[tool.hatch.build.targets.wheel]
packages = ["diploma"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "B019",
  "D203",
  "D213",
  "N803",
  "N817",
  "RUF001",
  "T201",
]

[tool.ruff.lint.pylint]
max-statements = 100

[tool.uv]
environments = [
  "platform_system == 'Linux'",
  "platform_system == 'Windows'",
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true

[[tool.uv.sources.pytorch-triton-rocm]]
index = "pytorch-rocm"
marker = "sys_platform == 'linux'"

[[tool.uv.sources.torch]]
index = "pytorch-rocm"
marker = "sys_platform == 'linux'"

[[tool.uv.sources.torchvision]]
index = "pytorch-rocm"
marker = "sys_platform == 'linux'"

[[tool.uv.sources.triton-rocm]]
index = "pytorch-rocm"
marker = "sys_platform == 'linux'"
